[package]
name = "eil-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "eil"
path = "src/lib.rs"

[[bin]]
name = "eil-example"
path = "src/main.rs"

[dependencies]
# Ethereum
alloy = { version = "0.8", features = ["providers", "rpc-types", "rpc-types-eth", "signer-local", "contract", "json-abi"], default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Utilities
hex = "0.4"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"

[features]
# Make test utilities available for integration tests
default = []
